# distributed-hpa-star

./: .clang-format  .dockerignore  .gitignore  DOCKER_SETUP.md  Dockerfile  README.md  analyze_a.ipynb  analyze_benchmark.ipynb  analyze_mem.ipynb  analyze_workers.ipynb  benchmark.py  benchmark_results.json  docker-compose.yml
.github/: test.yml
a/: README.md
a*/: CMakeLists.txt  README.md  a
a*/src/: README.md  a*.c  a*.h  a.c  a.h  main.c
a/src/: a.c  a.h
analysis/: analyze_a.ipynb  analyze_benchmark.ipynb  analyze_cs.ipynb  analyze_maps.ipynb  analyze_mem.ipynb  analyze_pl.ipynb  analyze_workers.ipynb  benchmark_results.json  dhpa_pl_ideal_maze.json  dhpa_pl_med_maze.json  dhpa_pl_poor_maze.json  dhpa_pl_poor_mp2.json  mp2.json  mp4.json
common/: block_map.c  block_map.h  constants.h  graph.c  graph.h  main.c  map.c  map.h  mheap.c  mheap.h  parser.c  parser.h  result.c  result.h  rle.c  rle.h  stb_ds.h  tcp.c  tcp.h  util.c  util.h  vbitset.c  vbitset.h  vec2.c  vec2.h
data/dense/generator/: CMakeLists.txt  main.c
data/ih/: scene_test
dhpa/: Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh
dhpa/common/: cluster_a.c  cluster_a.h  graph_a.c  graph_a.h
dhpa/master/: CMakeLists.txt  README.md
dhpa/master/src/: main.c  master_a.c  master_a.h  preprocess.c  preprocess.h
dhpa/worker/: CMakeLists.txt  README.md
dhpa/worker/src/: main.c  worker_a.c  worker_a.h
hpa/: README.md
hpa*/: CMakeLists.txt  README.md  hpa
hpa*/src/: a.c  a.h  cluster_a.c  graph.c  graph.h  graph_a.c  graph_a.h  hpa.c  hpa.h
hpa/src/: cluster_a.c  cluster_a.h  graph_a.c  hpa.c  hpa.h
phpa*/: average_results.py  build.sh
phpa*/common/: graph_a.c  graph_a.h  hpa.h
phpa*/master/: CMakeLists.txt
phpa*/master/src/: find.c  main.c  preprocess.c  preprocess.h
phpa*/worker/: CMakeLists.txt
phpa*/worker/src/: cluster_a.c  cluster_a.h  graph_a.c  graph_a.h  hpa.c  hpa.h  main.c  worker_a.c  worker_a.h
results/: hpa_mp2_manhattan.json  maze-hpa-chebyshev.json  mp2-hpa-cheby.json  mp2-hpa-euclidean.json  mp2-hpa-manhattan.json
results/cs/: hpa_maze_manhattan.json
results/h/: hpa_mp2_chebyshev.json  hpa_mp2_euclidean.json  hpa_mp2_manhattan.json  hpa_mp4_manhattan.json
results/pl/: dhpa_pl_ideal_mp2.json  dhpa_pl_med_mp2.json
results/t/: maze.json
results/w/: dhpa_cs_maze.json  dhpa_pl_maze.json  dhpa_pl_mp2.json  dhpa_w1_maze.json  dhpa_w1_mp2.json  dhpa_w_maze.json  dhpa_w_mp2.json  dhpa_workers_mp2.json  hpa_maze.json  hpa_mp2.json  worker.json
